--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://morosisakhe:PRM105^daFoS&&24@cluster0.9vwzp8k.mongodb.net/AuthDatabase
+MONGO_URI = mongodb+srv://morosisakhe:<password>@cluster0.9vwzp8k.mongodb.net/AuthDatabase
