--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@nextui-org/react": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.3.29",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "next": "^14.2.5",
